# videoTransform

./: .gitignore  Cargo.toml  README.md  algorithmia.conf
src/: alter_executor.rs  alter_handling.rs  extract_executor.rs  extract_handling.rs  ffmpeg.rs  file_mgmt.rs  lib.rs  processing.rs  utilities.rs  video_error.rs
src/alter/: executor.rs  functions.rs  mod.rs  utilities.rs
src/common/: algo.rs  alter_executor.rs  alter_handling.rs  extract_executor.rs  extract_handling.rs  ffmpeg.rs  file_mgmt.rs  json_utils.rs  misc.rs  mod.rs  preprocess.rs  processing.rs  rayon_stuff.rs  threading.rs  utilities.rs  video_error.rs  watchdog.rs
src/common/alter/: executor.rs  functions.rs  mod.rs
src/common/common/: ffmpeg.rs  file_mgmt.rs  json_utils.rs  misc.rs  mod.rs  rayon_stuff.rs
src/common/common/structs/: alter.rs  mod.rs
src/common/extract/: executor.rs  functions.rs
src/common/structs/: advanced_input.rs  alter.rs  extract.rs  ffmpeg.rs  gathered.rs  mod.rs  prelude.rs  processor.rs  scattered.rs
src/extract/: executor.rs  functions.rs  utilities.rs
src/structs/: alter.rs  gathered.rs  mod.rs
src/transform/: executor.rs  functions.rs  utilities.rs
