[package]
name = "VideoTransform"
version = "0.1.0"

# Do NOT change the [[bin]] and [lib] sections
[[bin]]
name = "pipe"
path = "bin/pipe.rs"
[lib]
name = "algorithm"

[dependencies]
algorithmia = "2.1.0"
base64 = "0.3.0"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"
regex = "0.1.77"
lazy_static = "0.2.6"
std-semaphore = "0.1.0"
quick-error = "1.1.0"
rayon = "0.6.0"
uuid = { version = "0.2.3", features = ["v4"]}
either ="1.0.1"